--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
+    "react-pdf": "^9.2.1",
+    "react-pdf-html": "^2.1.3",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.1.1",
     "socket.io-client": "^4.8.1",
