--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=3001
 MONGO_URI=mongodb://localhost:27017/quizaki
 CORS_ORIGIN=http://localhost:3000
+
+VITE_API_URL=https://quizaki.onrender.com
