--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ PORT=3001
 MONGO_URI=mongodb://localhost:27017/quizaki
 CORS_ORIGIN=http://localhost:3000
 
-VITE_API_URL=https://quizaki.onrender.com
+VITE_API_URL=http://13.233.225.87:8080
